Rename configure.in to configure.ac, twice
* configure.ac: Rename from configure.in.
* GUILE-VERSION: Update comments; nfc.
* HACKING: Likewise.

* guile-readline/configure.ac: Rename from guile-readline/configure.in.
* guile-readline/LIBGUILEREADLINE-VERSION: Update comments; nfc.

* libguile/__scm.h: Likewise.
* libguile/gen-scmconfig.c: Likewise.
* libguile/gen-scmconfig.h.in: Likewise.

--- a/HACKING
+++ b/HACKING
@@ -184,7 +184,7 @@ most lenient compiler they can find.  :)
 - If you add code which uses functions or other features that are not
 entirely portable, please make sure the rest of Guile will still
 function properly on systems where they are missing.  This usually
-entails adding a test to configure.in, and then adding #ifdefs to your
+entails adding a test to configure.ac, and then adding #ifdefs to your
 code to disable it if the system's features are missing.
 
 - The normal way of removing a function, macro or variable is to mark
