Fix texinfo files for makeinfo-5.1
* doc/ref/api-options.texi: Move "Debugger options" in the menu.
* doc/ref/api-utility.texi (Handling Scheme-level hooks from C code):
  Turn into a @subsubheading.
* doc/ref/fdl.texi (ADDENDUM: How to use this License for your
  documents): Turn into @appendixsec.
* doc/ref/gh.texi: Don't use @dots{} in the middle of @deftypefun{,x}.

Signed-off-by: Ludovic Courtès <ludo@gnu.org>

--- a/doc/ref/api-utility.texi
+++ b/doc/ref/api-utility.texi
@@ -657,7 +657,7 @@ Return 1 if @var{x} is a Scheme-level hook, 0 otherwise.
 @end deftypefn
 
 
-@subsubsection Handling Scheme-level hooks from C code
+@subsubheading Handling Scheme-level hooks from C code
 
 Here is an example of how to handle Scheme-level hooks from C code using
 the above functions.
